chore: extract server.jvmargs